--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
     
     </div>
       <button class="btn btn-outline-info w-100 my-3" id="signBtn">Sign Up</button>
+      <button class="btn btn-outline-info w-50 my-3" id="logBtn">LogIn</button>
     </div>
     <!-- username -->
-    <div class="group m-auto w-50 p-5 text-center mt-5 d-none" id="Welcame">
+    <div class="group m-auto w-25 p-5 text-center mt-5 d-none" id="Welcame">
       <h1 id="username">Welcame</h1>
       <h1 id="WelcameUserName"></h1>
     </div>
